# cargo-regression

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml  release.yml
demo/: __all__.toml  cmp.sh  full.toml  local_bin
demo/test-local-bin/: __all__.toml  test1.sh
demo/test-premit/: __all__.toml  test1.sh  test2.sh
demo/test-py/: __all__.toml  test-exit.py  test-exit.toml
demo/test-segfault/: __all__.toml  segfault.cpp
demo/test-sh/: __all__.toml  test-custom.sh  test-custom.toml  test-extend.sh  test-extend.toml  test-glob.sh  test-glob.toml  test-match.sh  test-match.toml  test-value.sh  test-value.toml
demo/test-sh/__golden__/: test-extend.stdout
demo/trybuild/: __all__.toml  compile-fail.rs  compile-fail.toml
demo/trybuild/__golden__/: compile-fail.stderr
examples/: app.rs  fix_args.rs  regression.rs
src/: args.rs  assert.rs  config.rs  lib.rs  main.rs  regression.rs
tests/: self_regression.rs
tests/self_regression/: exclude.sh  exclude.toml  include.sh  include.toml
