[package]
name = "cargo-regression"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Junzhuo <zhou@junzhuo.site>"]
keywords = ["test", "regression"]
readme = "README.md"
repository = "https://github.com/zao111222333/cargo-regression"
documentation = "https://docs.rs/cargo-regression"
categories = ["development-tools"]
description = "Regressions."

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.7", features = ["serde"] }
toml = "0.8"
regex = "1.11"
thiserror = "2.0"
itertools = "0.14"
async-recursion = "1.1.1"
clap = { version = "4.5", features = ["derive"] }
derive_setters = "0.1.6"
similar = { version = "2.7", features = ["inline"]}
# validator = { version = "0.20", features = ["derive"] }