[package]
name = "cargo-regression"
version = "0.4.3"
edition = "2024"
license = "MIT"
authors = ["Junzhuo <zhou@junzhuo.site>"]
keywords = ["test", "regression"]
readme = "README.md"
repository = "https://github.com/zao111222333/cargo-regression"
documentation = "https://docs.rs/cargo-regression"
categories = ["development-tools"]
description = "Collect test task from input files, execute them and compare results with golden."

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.7", features = ["serde"] }
toml = "0.8"
regex = "1.11"
thiserror = "2.0"
itertools = "0.14"
colored = "3"
async-recursion = "1.1.1"
glob = "0.3"
clap = { version = "4.5", features = ["derive"] }
similar = { version = "2.7", features = ["inline"] }
# validator = { version = "0.20", features = ["derive"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"
